[FIXED] implemented toString for better debug info